Update to add styles with js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- STYLESHEET - REMEMBER TO USE CDN VERSION TO TEST LIVE -->
     
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dental-design/chatbot-script@latest/chatbot-styles.css"> -->
-    <link rel="stylesheet" href="/dist/chatbot-styles.css">
+    <!-- <link rel="stylesheet" href="/dist/chatbot-styles.css"> -->
 
     
     <!-- STYLESHEET - REMEMBER TO USE CDN VERSION TO TEST LIVE -->
