--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- STYLESHEET - REMEMBER TO USE CDN VERSION TO TEST LIVE -->
-    
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dental-design/chatbot-script@latest/chatbot-styles.css"> -->
-    <!-- <link rel="stylesheet" href="/dist/chatbot-styles.css"> -->
-
-    
-    <!-- STYLESHEET - REMEMBER TO USE CDN VERSION TO TEST LIVE -->
+    <!-- SCRIPTS - REMEMBER TO USE CDN VERSION TO TEST LIVE -->
 
     <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/dental-design/chatbot-script@latest/chatbot-script.js" defer ></script> -->
     <script type="text/javascript" src="/dist/chatbot-script.js" defer ></script>
