--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
     <!-- SCRIPTS - REMEMBER TO USE CDN VERSION TO TEST LIVE -->
 
-    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/dental-design/chatbot-script@latest/chatbot-script.js" defer ></script> -->
-    <script type="text/javascript" src="/dist/chatbot-script.js" defer ></script>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/dental-design/chatbot-script@latest/dist/chatbot-script.js" defer ></script> -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/dental-design/chatbot-script/dist/chatbot-script.js" defer ></script>
+    <!-- <script type="text/javascript" src="/dist/chatbot-script.js" defer ></script> -->
 
     <script type="text/javascript" defer >
 
