Powered by added to dialog

--- a/src/html/dialog.html
+++ b/src/html/dialog.html
@@ -4,4 +4,5 @@
 </button>
 <div class="chatbot__dialog" id="chatDialog" role="dialog" aria-modal="true" aria-hidden="true">
   <iframe height="100%" width="100%" allow="clipboard-write *" style="border: none;"></iframe>
+  <span class="chatbot__powered">Powered by <a href="https://dental-design.marketing/" target="_blank" rel="noopener noreferrer">Dental Design</a></spa>
 </div>
